<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyWolfPackGuide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="hello_admin">Hello admin!</string>
    <string name="txtUserName">User Name</string>
    <string name="txtPwd">Password</string>
    <string name="txtEmail">Email ID</string>
    <string name="btnNext">Next</string>
    <string name="button_login">Login</string>
    <string name="button_Register">Register</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="category">Select the category:</string>
    <string name="title_activity_admin_home_page">AdminHomePage</string>
    <string name="title_activity_user_home_page">UserHomePage</string>
    <string name="title_section1">All Events</string>
    <string name="title_section2">Registered Events</string>
    <string name="title_section3">Past Events</string>

</resources>
